--- a/index.html
+++ b/index.html
@@ -1,105 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Class Monitor Voting System</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        form {
-            margin: 20px 0;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input, select {
-            padding: 8px;
-            margin-right: 10px;
-        }
-        button {
-            padding: 8px 15px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .vote-board {
-            margin-top: 30px;
-        }
-        .vote-board ul {
-            list-style: none;
-            padding: 0;
-        }
-        .vote-board li {
-            padding: 10px;
-            border: 1px solid #ddd;
-            margin-bottom: 10px;
-            border-radius: 4px;
-        }
-        .vote-entry {
-            margin: 5px 0;
-            padding: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #f9f9f9;
-        }
-        .delete-btn {
-            background-color: #ff4444;
-        }
-        .delete-btn:hover {
-            background-color: #cc0000;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Voting System</title>
 </head>
 <body>
-    <h1>Class Monitor Voting System</h1>
-    <p>
-        Welcome to the voting system. Please cast your vote for your preferred class monitor below.
-    </p>
+    <section>
+        <h1>Voting System</h1>
 
-    <form action="">
-        <label for="name">Student Name</label>
-        <input type="text" name="name">
-        
-        <label for="monitor">Choose Monitor</label>
-        <select name="monitor" id="monitor">
-            <option value="suresh">Suresh</option>
-            <option value="deepank">Deepank</option>
-            <option value="abhik">Abhik</option>
-        </select>
+        <form action="">
+            <label for="name">Student name</label>
+            <input type="text" name="name">
+            
 
-        <button type="submit">vote</button>
+            <label for="candidate">Choose your candidate</label>
+            <select name="candidate" id="vote">
+                <option value="ravi">Ravi</option>
+                <option value="gurung">Gurung</option>
+                <option value="mahesh">Mahesh</option>
+            </select>
 
-    </form>
+            <button type="submit">Vote</button>
+        </form>
+    </section>
 
-
-    <div class="vote-board">
-        <ul>
-            <li id="suresh">Suresh</li>
-            <li id="deepank">Deepank</li>
-            <li id="abhik">Abhik</li>
-        </ul>
-
-    </div>
-
-    <!-- Add Axios for making HTTP requests -->
+    <ul class="candidate-list"></ul>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- Add our main JavaScript file -->
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
