--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<p class="total-votes"></p>
 
 			<form>
-				<label for="name">Student name</label>
-				<input type="text" name="name" />
+				<label for="name">Student name:</label>
+				<input type="text" name="name" required/>
 
 				<label for="candidate">Choose your candidate</label>
 				<select
